gravitee-apim-console-webui/src/management/_stepper.scss
input[type='number'] + div.md-errors-spacer + .hint {
  bottom: -5px;
}
md-select + .hint {
  bottom: -17px;
}
.hint {
  /* Position the hint */
  position: absolute;
  left: 2px;
  right: auto;
  bottom: 7px;
  /* Copy styles from ng-messages */
  font-size: 12px;
  line-height: 14px;
  transition: all 0.3s cubic-bezier(0.55, 0, 0.55, 0.2);
  /* Set our own color */
  color: grey;
}
.hint.ng-hide,
.hint.ng-enter,
.hint.ng-leave.ng-leave-active {
  bottom: 26px;
  opacity: 0;
}
.hint.ng-leave,
.hint.ng-enter.ng-enter-active {
  bottom: 7px;
  opacity: 1;
}

md-steppers-canvas {
  background-color: #fff;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
}

md-steppers-canvas.md-paginated {
  margin: 0 !important;
}

.gv-creation-steppers {
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
  background: #fff;
  margin: 20px 20px 20px 20px;
}

.import-file-drop-box {
  background: #f8f8f8;
  border: 1px dashed #ddd;
  margin: 10px auto;
  padding: 7px 7px 7px 7px;
  width: 90%;
}

md-radio-button.import-file-from-url {
  margin-right: 30px;
  display: inline;
  .md-label {
    vertical-align: inherit;
    line-height: 30px;
  }
}

.import-file-from-url {
  width: 90%;
  margin: 10px auto;
  input {
    background: #f8f8f8;
    border: 1px solid #ddd;
    box-shadow: none;
  }
}

.md-button.create-gv-button {
  ng-md-icon {
    top: 8px;
  }
}

.md-button.import-gv-button {
  background-color: rgb(68, 138, 255);
  color: white;
  &:hover:enabled {
    background-color: rgb(41, 98, 255) !important;
  }
}

.gv-abstract-content {
  overflow-y: auto;
  height: calc(100vh - 180px);
  code {
    color: rgb(68, 138, 255);
  }
  ng-md-icon {
    fill: #337ab7;
    top: 4px;
  }
}

.gv-creation-pages-content {
  overflow-y: auto;
  height: calc(100vh - 365px);
}

.gv-creation-plan-content {
  overflow-y: auto;
  height: calc(100vh - 230px);
}

.gv-creation-content {
  top: 10px;
}

.gv-abstract-warning {
  color: orange;
  border-left: 5px solid orange;
  padding-left: 20px;
  padding-bottom: 15px;
  margin-left: 20px;
}

.gv-abstract-documentation-link {
  display: block;
  text-align: center;
  padding: 16px;
  color: rgba(0, 0, 0, 0.8);
  background-color: #fff59d;
}

.gv-creation-timeline-wrapper {
  background: #fff;
  margin: 20px 20px 20px 0px;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12);
  h4 {
    margin-top: 15px;
    margin-bottom: 22px;
  }
}

.gv-creation-timeline .timeline:before {
  position: absolute;
  width: 1px;
  left: 2%;
}

.gv-creation-timeline ul.timeline li timeline-panel {
  width: 90%;
  padding: 5px;
  border: none;
  box-shadow: none;

  &.disable {
    color: rgba(0, 0, 0, 0.27);
    timeline-heading {
      color: rgba(0, 0, 0, 0.27) !important;
    }
  }
}

.gv-creation-timeline .timeline li timeline-panel:before {
  top: 25px !important;
  border: none;
}

.gv-creation-timeline .timeline li timeline-panel:after {
  top: 26px !important;
  border: none;
}

.gv-creation-timeline .timeline li.timeline-inverted timeline-panel {
  float: left;
  left: 8%;
  code {
    color: rgb(68, 138, 255);
  }
}

.gv-creation-timeline .timeline li timeline-badge {
  box-shadow: none;
  width: 30px;
  height: 30px;
  line-height: 30px;
  font-size: 1.8em;
  left: 4%;
  top: 10px;
  background-color: #fff !important;
  z-index: 0;

  &.disable {
    i {
      color: rgba(0, 0, 0, 0.27);
    }
  }

  &.info {
    i {
      color: var(--gv-theme-color-darker);
    }
  }
}

md-pagination-wrapper {
  transform: none !important;
}

.md-step.md-active md-step-label-wrapper:before,
.md-step.md-success md-step-label-wrapper:before {
  background: var(--gv-theme-color-darker);
}

